# c-plus-plus-modern-development

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  clean.bat  configure.bat  rules.ruleset
c-plus-plus-brown/week-1/hash-table-1/: CMakeLists.txt  hash_set.cxx  hash_set_test.cxx
c-plus-plus-brown/week-1/hash_person/: CMakeLists.txt  hash_person.cxx  hash_person_test.cxx
c-plus-plus-brown/week-1/hash_point/: CMakeLists.txt  hash_point.cxx  hash_point_test.cxx
c-plus-plus-brown/week-1/secondary_index/: CMakeLists.txt  secondary_index.cxx  secondary_index_test.cxx
c-plus-plus-brown/week-1/set_iterator_next/: CMakeLists.txt  set_iterator_next.cxx  set_iterator_next_test.cxx
c-plus-plus-red-v2/week-1/: 1.log.cpp  2.scanner.cpp  3.update_field.cpp  4.print_values.cpp  5.uniq_id.cpp  CMakeLists.txt  airline_ticket.h
c-plus-plus-red/week-1/: .clang-tidy  CMakeLists.txt  log.cpp  week-1.sln
c-plus-plus-red/week-1/0.test-task/: max_element_if.cpp
c-plus-plus-red/week-1/2.comparator-generator/: comparator-generator.cpp
c-plus-plus-red/week-1/3.update-field/: update_field.cpp
c-plus-plus-red/week-1/4.bad-macros/: bad.cpp
c-plus-plus-red/week-1/5.unique-token/: uniq_id.cpp
c-plus-plus-red/week-1/7.dequeue/: deque.hpp  main.cpp
c-plus-plus-red/week-1/Paginator/: Paginator.vcxproj  Paginator.vcxproj.filters  paginator.cpp
c-plus-plus-red/week-1/two-vector-based-dequeue/: dequeue.h  two-vector-based-dequeue.cpp  two-vector-based-dequeue.vcxproj  two-vector-based-dequeue.vcxproj.filters
c-plus-plus-red/week-2/: CMakeLists.txt
c-plus-plus-red/week-2/1.sort-students/: sort_students.cpp
c-plus-plus-red/week-2/2.learner/: learner.cpp
c-plus-plus-red/week-2/3.express-routing/: slow.cpp
c-plus-plus-red/week-2/4.ebook/: slow.cpp
c-plus-plus-red/week-2/5.hotel-reservation-system/: hotel.cpp
c-plus-plus-red/week-2/e-book/: CMakeLists.txt  e-book.cpp
c-plus-plus-red/week-2/hotel-reservation-system/: CMakeLists.txt  main.cpp
c-plus-plus-red/week-2/learner/: CMakeLists.txt  learner.cpp
c-plus-plus-red/week-2/sort-by-rating/: CMakeLists.txt  main.cpp  sort_students.cpp  student.h
c-plus-plus-red/week-3/: .clang-tidy  CMakeLists.txt
c-plus-plus-red/week-3/1.object-pool/: object_pool.cpp
c-plus-plus-red/week-3/2.vector/: simple_vector.cpp
c-plus-plus-red/week-3/3.linked-list/: linked_list.cpp
c-plus-plus-red/week-3/linked-list/: CMakeLists.txt  linked_list.cpp
c-plus-plus-red/week-3/object-pool/: CMakeLists.txt  object-pool.cpp
c-plus-plus-red/week-3/simple-vector/: CMakeLists.txt  simple_vector.cpp  simple_vector.h
c-plus-plus-red/week-3/swap-sort-pointers-reversed-copy/: CMakeLists.txt  swap_sort_copy.cpp
c-plus-plus-red/week-4/airport-counter/: CMakeLists.txt  airport_counter.cpp
c-plus-plus-red/week-4/text-editor/: CMakeLists.txt  text_editor.cpp
c-plus-plus-red/week-4/web-server-stats/: CMakeLists.txt  http_request.h  server_stats.cpp  stats.cpp  stats.h
c-plus-plus-red/week-5/: 1.josephus_permutation.cpp  CMakeLists.txt  concurrent_map.cpp  explore_key_words.cpp  josephus_permutation.cpp  matrix_sum.cpp  merge_sort_3.cpp  priority_collection_2.cpp  simple_vector.cpp  simple_vector.h  simple_vector_2.cpp  simple_vector_2.h  split_into_sentences.cpp  synchronized.cpp
c-plus-plus-red/week-5/explore_key_words/: CMakeLists.txt  explore_key_words.cpp
c-plus-plus-red/week-5/josephus_permutation/: CMakeLists.txt  josephus_permutation.cpp
c-plus-plus-red/week-5/matrix_sum/: CMakeLists.txt  matrix_sum.cpp
c-plus-plus-red/week-5/merge_sort/: CMakeLists.txt  merge_sort_3.cpp
c-plus-plus-red/week-5/priority_container/: CMakeLists.txt  priority_collection_2.cpp
c-plus-plus-red/week-5/simple_vector_copy_assignment_operator/: CMakeLists.txt  simple_vector.h
c-plus-plus-red/week-5/simple_vector_move/: CMakeLists.txt  simple_vector_2.cpp  simple_vector_2.h
c-plus-plus-red/week-5/synchronized/: CMakeLists.txt  synchronized.cpp
c-plus-plus-red/week-5/tokenizer/: CMakeLists.txt  split_into_sentences.cpp
c-plus-plus-white/week-1/: 1.a-b.cpp  2.minimal-naia-stroka.cpp  3.equation.cpp  4.division.cpp  5.calculation-of-the-cost-of-goods.cpp  6.even-nums.cpp  7.second-occurrence.cpp  8.gcd.cpp  9.binary-numbers.cpp  CMakeLists.txt
c-plus-plus-white/week-2/: 1.factorial.cpp  10.monthly-affairs.cpp  11.is-anagrams.cpp  12.capitals.cpp  13.bus-stops-1.cpp  14.bus-stops-2.cpp  15.synonyms.cpp  16.bus-stops-3.cpp  2.is-palindrom.cpp  3.palindrom-filter.cpp  4.maximizer.cpp  5.move-strings.cpp  6.reverse.cpp  7.reversed.cpp  8.average-temperature.cpp  9.queue.cpp  CMakeLists.txt
c-plus-plus-white/week-3/: 1.sorting-module.cpp  2.sorting-case-insensitive.cpp  3.sorted-string.cpp  4.names-and-surnames.cpp  5.names-and-surnames-2.cpp  6.reversible-string.cpp  7.names-and-surnames-3.cpp  8.incognizable.cpp  CMakeLists.txt
c-plus-plus-white/week-4/: .gitignore  1.lecture-title.cpp  10.rational.cpp  11.rational-calc.cpp  12.server-time.cpp  2.class-function.cpp  3.class-function-2.cpp  4.working-with-files.cpp  5.conclusion-with-precision.cpp  6.reading-and-dumping-a-table.cpp  7.students-list.cpp  8.1.rational.cpp  8.2.rational.cpp  8.3.rational.cpp  8.4.rational.cpp  8.5.rational.cpp  8.rational.cpp  9.ensure-equal.cpp  CMakeLists.txt
old/c-plus-plus-red/week-3/: CMakeLists.txt  main.cpp
old/c-plus-plus-red/week-3/1.object-pool/: object_pool.cpp
old/c-plus-plus-red/week-3/2.vector/: simple_vector.cpp  simple_vector.h
old/c-plus-plus-red/week-3/3.linked-list/: linked_list.cpp
old/c-plus-plus-red/week-4/: CMakeLists.txt
old/c-plus-plus-red/week-4/0.tests/: string_view.cc
old/c-plus-plus-red/week-4/1.sportsman/: sportsman.cc
old/c-plus-plus-red/week-4/2.stack-vector/: stack_vector.h
old/c-plus-plus-red/week-4/3.translator/: translator.cpp
old/c-plus-plus-red/week-4/4.airport-counter/: airport-counter.cpp
old/c-plus-plus-red/week-4/5.basic-text-editor/: text_editor.cpp
shared/: CMakeLists.txt
shared/googletest-cmake/: CMakeLists.txt
stuff/: profile.h  (+2 more)
(+52 files in other folders)
