cmake_minimum_required(VERSION 3.25)
project(c-plus-plus-modern-development)

#set(CMAKE_CXX_STANDARD_REQUIRED On)
#set(CMAKE_CXX_STANDARD 20)

#set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR})
#if(UNIX)
#  set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR})
#endif()

#include_directories(stuff)

#if(UNIX)
#  message("GCC")
#  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")
  # set(CMAKE_CXX_FLAGS "-Wall -Wextra -Wpedantic -Wcast-qual -Wconversion
  # -Wduplicated-branches -Wduplicated-cond  -Wextra-semi -Wfloat-equal
  # -Wnon-virtual-dtor -Wsign-conversion" )
#endif()

#add_subdirectory(c-plus-plus-red)
