project(week-5)
message("Project: " ${PROJECT_NAME} ". Module: " ${CMAKE_PROJECT_NAME} ".")

add_subdirectory(josephus_permutation)
add_subdirectory(simple_vector_copy_assignment_operator)
add_subdirectory(tokenizer)
add_subdirectory(simple_vector_move)
add_subdirectory(merge_sort)
add_subdirectory(matrix_sum)
add_subdirectory(explore_key_words)
add_subdirectory(synchronized)
